updated portfolio links to be more apparent

--- a/portfolio.html
+++ b/portfolio.html
@@ -61,7 +61,9 @@
                 <a href="https://marasinipradeep.github.io/music-app/">
                     <img src="Assets\Images\proj1Finished.png" alt="music quiz app" class="portfolio-img">
                 </a>
-                <p class="p-portfolio"><a href="https://github.com/marasinipradeep/music-app/">github repo</a></p>
+                <p class="p-portfolio"> Sources: <a href="https://marasinipradeep.github.io/music-app/">Github
+                        Repository</a>,
+                    <a href="https://github.com/marasinipradeep/music-app/">Github Pages</a></p>
             </div>
             <div>
                 <h3 class="h3-portfolio">Weather Dashboard</h3>
@@ -69,7 +71,9 @@
                     <img src="https://raw.githubusercontent.com/djtoohey/homework-wk6/master/assets/finished.png"
                         alt="weather dashboard app" class="portfolio-img">
                 </a>
-                <p class="p-portfolio"><a href="https://github.com/djtoohey/homework-wk6/">github repo</a></p>
+                <p class="p-portfolio"> Sources: <a href="https://github.com/djtoohey/homework-wk6/">Github
+                        Repository</a>,
+                    <a href="https://djtoohey.github.io/homework-wk6/">Github Pages</a></p>
             </div>
             <div>
                 <h3 class="h3-portfolio">Work Day Scheduler</h3>
@@ -77,7 +81,9 @@
                     <img src="https://raw.githubusercontent.com/djtoohey/homework-wk5/master/assets/finished.png"
                         alt="work day scheduler app" class="portfolio-img">
                 </a>
-                <p class="p-portfolio"><a href="https://github.com/djtoohey/homework-wk5/">github repo</a></p>
+                <p class="p-portfolio"> Sources: <a href="https://github.com/djtoohey/homework-wk5/">Github
+                        Repository</a>,
+                    <a href="https://djtoohey.github.io/homework-wk5/">Github Pages</a></p>
             </div>
             <div>
                 <h3 class="h3-portfolio">Coding Quiz App</h3>
@@ -85,7 +91,9 @@
                     <img src="https://raw.githubusercontent.com/djtoohey/homework-wk4/master/assets/finished.png"
                         alt="code quiz app" class="portfolio-img">
                 </a>
-                <p class="p-portfolio"><a href="https://github.com/djtoohey/homework-wk4/">github repo</a></p>
+                <p class="p-portfolio"> Sources: <a href="https://github.com/djtoohey/homework-wk4/">Github
+                        Repository</a>,
+                    <a href="https://djtoohey.github.io/homework-wk4/">Github Pages</a></p>
             </div>
         </div>
 
