changed personal img to one used for linkedin and gh, added linkedin link

--- a/index.html
+++ b/index.html
@@ -83,8 +83,11 @@
                     currently attending these courses at night and on weekends while still being able to work during
                     weekdays.
                     <br><br>
-                    Find his GitHub <a href="https://github.com/djtoohey/" target="_blank">here!</a>
-
+                    <a href="https://github.com/djtoohey/" target="_blank">Find his GitHub here!</a>
+                <div class="LI-profile-badge" data-version="v1" data-size="medium" data-locale="en_US"
+                    data-type="horizontal" data-theme="light" data-vanity="declantoohey"><a class="LI-simple-link"
+                        href='https://au.linkedin.com/in/declantoohey?trk=profile-badge'>Find his LinkedIn here!</a>
+                </div>
 
 
                 </p>
@@ -101,6 +104,8 @@
             Copyright&copy
         </div>
     </footer>
+
+    <script type="text/javascript" src="https://platform.linkedin.com/badges/js/profile.js" async defer></script>
 </body>
 
 </html>
