--- a/contact.html
+++ b/contact.html
@@ -63,6 +63,7 @@
                         https://www.github.com/djtoohey</a></p>
                 <p>LinkedIn: <a href="https://www.linkedin.com/in/DeclanToohey/"
                         target="_blank">https://www.linkedin.com/in/DeclanToohey/</a></p>
+                <p>Resume: <a href="assets\RESUME2020.pdf" target="_blank">here!</a></p>
 
                 <!-- will update form to work at later date -->
                 <!-- a bootstrap form -->
@@ -102,7 +103,7 @@
 
         <!-- puts in a scalable padding using bootstrap -->
         <div class="py-3 footer-bg">
-            Copyright&copy
+            Declan Toohey &copy
         </div>
     </footer>
 </body>
