--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             <div class="col-xs col-sm">
                 <!-- setting image to a photo of me and styling to allow the text to wrap around the text but then also 
                     move accordingly when in mobile view -->
-                <img src="assets\images\declan.jpg" id="index-img">
+                <img src="assets/images/declan.jpg" id="index-img">
                 <p> Born in Hobart Tasmania, Australia, in the Year 2000 and raised in South East Asia, two years in
                     Brunei and eight in Singapore, moved to Adelaide in 2015. Declan has had an interest in Computer
                     Science/Information Technology since Year 1. This developed through playing games such as Minecraft,
