--- a/portfolio.html
+++ b/portfolio.html
@@ -53,13 +53,13 @@
                 <!-- line between heading and content -->
             </div>
         </div>
-        <h4>Resume: <a href="assets/RESUME2020.pdf" target="_blank">Last Updated 07/2020</a></h4>
+        <h4>Resume: <a href="./assets/RESUME2020.pdf" target="_blank">Last Updated 07/2020</a></h4>
         <!-- 3 rows, max 2 cols -->
         <div class="row ">
             <div>
                 <h3 class="h3-portfolio">Music Quiz App</h3>
                 <a href="https://marasinipradeep.github.io/music-app/" target="_blank">
-                    <img src="assets/images/proj1Finished.png" alt="music quiz app" class="portfolio-img">
+                    <img src="./assets/images/proj1Finished.png" alt="music quiz app" class="portfolio-img">
                 </a>
                 <p class="p-portfolio"> Sources: <a href="https://marasinipradeep.github.io/music-app/"
                         target="_blank">Github
