updating problems found from validator.we.org

--- a/index.html
+++ b/index.html
@@ -84,14 +84,13 @@
                     weekdays.
                     <br><br>
                     <a href="https://github.com/djtoohey/" target="_blank">Find his GitHub here!</a>
+                </p>
                 <div class="LI-profile-badge" data-version="v1" data-size="medium" data-locale="en_US"
                     data-type="vertical" data-theme="light" data-vanity="DeclanToohey"><a class="LI-simple-link"
                         href='https://au.linkedin.com/in/declantoohey?trk=profile-badge' target="_blank">Find his
                         LinkedIn here!</a>
                 </div>
-
-
-                </p>
+                <p></p>
             </div>
         </div>
     </section>
@@ -102,7 +101,7 @@
         <p></p>
         <!-- puts in a scalable padding using bootstrap -->
         <div class="py-3 footer-bg">
-            Declan Toohey &copy
+            Declan Toohey &copy;
         </div>
     </footer>
 
