updated website and styling

--- a/contact.html
+++ b/contact.html
@@ -57,11 +57,12 @@
             <div class="col">
 
                 <!-- email, phone and linkedIn with working hyperlink -->
-                <p>Email: <a href="mailto:contact@declantoohey.com"> contact@declantoohey.com</a></p>
-                <p>Phone: <a href="tel:+61 431490343">+61 431 490 343</a></p>
-                <p>LinkedIn: <a
-                        href="https://www.linkedin.com/in/DeclanToohey/">https://www.linkedin.com/in/DeclanToohey/</a>
-                </p>
+                <p>Email: <a href="mailto:contact@declantoohey.com" target="_blank"> contact@declantoohey.com</a></p>
+                <p>Phone: <a href="tel:+61 431490343" target="_blank">+61 431 490 343</a></p>
+                <p>GitHub: <a href="https://www.github.com/djtoohey" target="_blank">
+                        https://www.github.com/djtoohey</a></p>
+                <p>LinkedIn: <a href="https://www.linkedin.com/in/DeclanToohey/"
+                        target="_blank">https://www.linkedin.com/in/DeclanToohey/</a></p>
 
                 <!-- will update form to work at later date -->
                 <!-- a bootstrap form -->
