--- a/portfolio.html
+++ b/portfolio.html
@@ -58,42 +58,46 @@
         <div class="row ">
             <div>
                 <h3 class="h3-portfolio">Music Quiz App</h3>
-                <a href="https://marasinipradeep.github.io/music-app/">
+                <a href="https://marasinipradeep.github.io/music-app/" target="_blank">
                     <img src="Assets\Images\proj1Finished.png" alt="music quiz app" class="portfolio-img">
                 </a>
-                <p class="p-portfolio"> Sources: <a href="https://marasinipradeep.github.io/music-app/">Github
+                <p class="p-portfolio"> Sources: <a href="https://marasinipradeep.github.io/music-app/"
+                        target="_blank">Github
                         Repository</a>,
-                    <a href="https://github.com/marasinipradeep/music-app/">Github Pages</a></p>
+                    <a href="https://github.com/marasinipradeep/music-app/" target="_blank">Github Pages</a></p>
             </div>
             <div>
                 <h3 class="h3-portfolio">Weather Dashboard</h3>
-                <a href="https://djtoohey.github.io/homework-wk6/">
+                <a href="https://djtoohey.github.io/homework-wk6/" target="_blank">
                     <img src="https://raw.githubusercontent.com/djtoohey/homework-wk6/master/assets/finished.png"
                         alt="weather dashboard app" class="portfolio-img">
                 </a>
-                <p class="p-portfolio"> Sources: <a href="https://github.com/djtoohey/homework-wk6/">Github
+                <p class="p-portfolio"> Sources: <a href="https://github.com/djtoohey/homework-wk6/"
+                        target="_blank">Github
                         Repository</a>,
-                    <a href="https://djtoohey.github.io/homework-wk6/">Github Pages</a></p>
+                    <a href="https://djtoohey.github.io/homework-wk6/" target="_blank">Github Pages</a></p>
             </div>
             <div>
                 <h3 class="h3-portfolio">Work Day Scheduler</h3>
-                <a href="https://djtoohey.github.io/homework-wk5/">
+                <a href="https://djtoohey.github.io/homework-wk5/" target="_blank">
                     <img src="https://raw.githubusercontent.com/djtoohey/homework-wk5/master/assets/finished.png"
                         alt="work day scheduler app" class="portfolio-img">
                 </a>
-                <p class="p-portfolio"> Sources: <a href="https://github.com/djtoohey/homework-wk5/">Github
+                <p class="p-portfolio"> Sources: <a href="https://github.com/djtoohey/homework-wk5/"
+                        target="_blank">Github
                         Repository</a>,
-                    <a href="https://djtoohey.github.io/homework-wk5/">Github Pages</a></p>
+                    <a href="https://djtoohey.github.io/homework-wk5/" target="_blank">Github Pages</a></p>
             </div>
             <div>
                 <h3 class="h3-portfolio">Coding Quiz App</h3>
-                <a href="https://djtoohey.github.io/homework-wk4/">
+                <a href="https://djtoohey.github.io/homework-wk4/" target="_blank">
                     <img src="https://raw.githubusercontent.com/djtoohey/homework-wk4/master/assets/finished.png"
                         alt="code quiz app" class="portfolio-img">
                 </a>
-                <p class="p-portfolio"> Sources: <a href="https://github.com/djtoohey/homework-wk4/">Github
+                <p class="p-portfolio"> Sources: <a href="https://github.com/djtoohey/homework-wk4/"
+                        target="_blank">Github
                         Repository</a>,
-                    <a href="https://djtoohey.github.io/homework-wk4/">Github Pages</a></p>
+                    <a href="https://djtoohey.github.io/homework-wk4/" target="_blank">Github Pages</a></p>
             </div>
         </div>
 
