--- a/index.html
+++ b/index.html
@@ -85,8 +85,9 @@
                     <br><br>
                     <a href="https://github.com/djtoohey/" target="_blank">Find his GitHub here!</a>
                 <div class="LI-profile-badge" data-version="v1" data-size="medium" data-locale="en_US"
-                    data-type="horizontal" data-theme="light" data-vanity="declantoohey"><a class="LI-simple-link"
-                        href='https://au.linkedin.com/in/declantoohey?trk=profile-badge'>Find his LinkedIn here!</a>
+                    data-type="vertical" data-theme="dark" data-vanity="DeclanToohey"><a class="LI-simple-link"
+                        href='https://au.linkedin.com/in/declantoohey?trk=profile-badge' target="_blank">Find his
+                        LinkedIn here!</a>
                 </div>
 
 
