--- a/portfolio.html
+++ b/portfolio.html
@@ -53,7 +53,7 @@
                 <!-- line between heading and content -->
             </div>
         </div>
-        <h4>Resume: <a href="Assets\RESUME2020.pdf">Last Updated 07/2020</a></h4>
+        <h4>Resume: <a href="Assets\RESUME2020.pdf" target="_blank">Last Updated 07/2020</a></h4>
         <!-- 3 rows, max 2 cols -->
         <div class="row ">
             <div>
