adding burger project

--- a/portfolio.html
+++ b/portfolio.html
@@ -78,6 +78,16 @@
                     <a href="https://djtoohey.github.io/homework-wk6/" target="_blank">Github Pages</a></p>
             </div>
             <div>
+                <h3 class="h3-portfolio">Burger Logger</h3>
+                <a href="https://infinite-shelf-22659.herokuapp.com/index" target="_blank">
+                    <img src="https://raw.githubusercontent.com/djtoohey/burger/master/assets/finished.png"
+                        alt="weather dashboard app" class="portfolio-img">
+                </a>
+                <p class="p-portfolio"> Sources: <a href="https://github.com/djtoohey/burger/" target="_blank">Github
+                        Repository</a>,
+                    <a href="https://infinite-shelf-22659.herokuapp.com/index" target="_blank">Heroku</a></p>
+            </div>
+            <div>
                 <h3 class="h3-portfolio">Work Day Scheduler</h3>
                 <a href="https://djtoohey.github.io/homework-wk5/" target="_blank">
                     <img src="https://raw.githubusercontent.com/djtoohey/homework-wk5/master/assets/finished.png"
