--- a/portfolio.html
+++ b/portfolio.html
@@ -80,8 +80,9 @@
             <div>
                 <h3 class="h3-portfolio">Burger Logger</h3>
                 <a href="https://infinite-shelf-22659.herokuapp.com/index" target="_blank">
+
                     <img src="https://raw.githubusercontent.com/djtoohey/burger/master/assets/finished.PNG"
-                        alt="weather dashboard app" class="portfolio-img">
+                        alt="Burger Logger App" class="portfolio-img">
                 </a>
                 <p class="p-portfolio"> Sources: <a href="https://github.com/djtoohey/burger/" target="_blank">Github
                         Repository</a>,
