--- a/portfolio.html
+++ b/portfolio.html
@@ -53,19 +53,34 @@
                 <!-- line between heading and content -->
             </div>
         </div>
-        <h4>Resume: <a href="./assets/RESUME2020.pdf" target="_blank">Last Updated 07/2020</a></h4>
+        <h4>Resume: <a href="./assets/RESUME2020.pdf" target="_blank">Last Updated 09/2020</a></h4>
         <!-- 3 rows, max 2 cols -->
         <div class="row ">
+            <!-- project1 -->
             <div>
                 <h3 class="h3-portfolio">Music Quiz App</h3>
                 <a href="https://marasinipradeep.github.io/music-app/" target="_blank">
                     <img src="./assets/images/proj1Finished.png" alt="music quiz app" class="portfolio-img">
                 </a>
-                <p class="p-portfolio"> Sources: <a href="https://marasinipradeep.github.io/music-app/"
+                <p class="p-portfolio"> Sources: <a href="https://github.com/marasinipradeep/music-app/"
                         target="_blank">Github
                         Repository</a>,
-                    <a href="https://github.com/marasinipradeep/music-app/" target="_blank">Github Pages</a></p>
+                    <a href="https://marasinipradeep.github.io/music-app/" target="_blank">Github Pages</a></p>
             </div>
+            <!-- project2 -->
+            <div>
+                <h3 class="h3-portfolio">Professor Oak’s Pokemon Love Calculator</h3>
+                <a href="https://powerful-mountain-92684.herokuapp.com/" target="_blank">
+                    <img src="./assets/images/proj2Finished.png" alt="Professor Oak’s Pokemon Love Calculator"
+                        class="portfolio-img">
+                </a>
+                <p class="p-portfolio"> Sources: <a
+                        href="https://github.com/thomasmaglaris/Professor-Oak-s-Pokemon-Love-Calculator"
+                        target="_blank">Github
+                        Repository</a>,
+                    <a href="https://powerful-mountain-92684.herokuapp.com/" target="_blank">Heroku</a></p>
+            </div>
+            <!-- hwwk6 -->
             <div>
                 <h3 class="h3-portfolio">Weather Dashboard</h3>
                 <a href="https://djtoohey.github.io/homework-wk6/" target="_blank">
@@ -77,6 +92,7 @@
                         Repository</a>,
                     <a href="https://djtoohey.github.io/homework-wk6/" target="_blank">Github Pages</a></p>
             </div>
+            <!-- hwwk13 -->
             <div>
                 <h3 class="h3-portfolio">Burger Logger</h3>
                 <a href="https://infinite-shelf-22659.herokuapp.com/index" target="_blank">
@@ -88,6 +104,7 @@
                         Repository</a>,
                     <a href="https://infinite-shelf-22659.herokuapp.com/index" target="_blank">Heroku</a></p>
             </div>
+            <!-- hwwk5 -->
             <div>
                 <h3 class="h3-portfolio">Work Day Scheduler</h3>
                 <a href="https://djtoohey.github.io/homework-wk5/" target="_blank">
@@ -99,6 +116,7 @@
                         Repository</a>,
                     <a href="https://djtoohey.github.io/homework-wk5/" target="_blank">Github Pages</a></p>
             </div>
+            <!-- hwwk4 -->
             <div>
                 <h3 class="h3-portfolio">Coding Quiz App</h3>
                 <a href="https://djtoohey.github.io/homework-wk4/" target="_blank">
