--- a/portfolio.html
+++ b/portfolio.html
@@ -17,12 +17,12 @@
     <nav class="container-fluid">
         <div class="row">
             <!-- setting xs and sm+ columns, styling for both instances -->
-            <div class="col-xs col-sm-4 navbar-styling col-xs-styling">
+            <div class="col-xs col-sm navbar-styling col-xs-styling">
                 <h1>Declan Toohey</h1>
             </div>
 
-            <div class="col-xs col-sm-8 navbar-styling">
-                <!-- setting id to style navbar links-->
+            <!-- <div class="col-xs col-sm-8 navbar-styling">
+                setting id to style navbar links
                 <p class="nav-links">
                     <a href="index.html" class="href">About</a>
                     |
@@ -30,7 +30,7 @@
                     |
                     <a href="contact.html" class="href">Contact</a>
                 </p>
-            </div>
+            </div> -->
         </div>
     </nav>
 
@@ -53,19 +53,18 @@
                 <!-- line between heading and content -->
             </div>
         </div>
-        <h4>Resume: <a href="./assets/RESUME2020.pdf" target="_blank">Last Updated 09/2020</a></h4>
+        <h4>Resume: <a href="./assets/RESUME2020.pdf" target="_blank">Last Updated 11/2020</a></h4>
         <!-- 3 rows, max 2 cols -->
         <div class="row ">
-            <!-- project1 -->
+            <!-- project3 -->
             <div>
-                <h3 class="h3-portfolio">Music Quiz App</h3>
-                <a href="https://marasinipradeep.github.io/music-app/" target="_blank">
-                    <img src="./assets/images/proj1Finished.png" alt="music quiz app" class="portfolio-img">
+                <h3 class="h3-portfolio">inTune for Spotify</h3>
+                <a href="https://djtoohey-intune.herokuapp.com/" target="_blank">
+                    <img src="./assets/images/proj3Finished.png" alt="inTune for Spotify" class="portfolio-img">
                 </a>
-                <p class="p-portfolio"> Sources: <a href="https://github.com/marasinipradeep/music-app/"
-                        target="_blank">Github
+                <p class="p-portfolio"> Sources: <a href="https://github.com/djtoohey/inTune" target="_blank">Github
                         Repository</a>,
-                    <a href="https://marasinipradeep.github.io/music-app/" target="_blank">Github Pages</a></p>
+                    <a href="https://djtoohey-intune.herokuapp.com/" target="_blank">Heroku</a></p>
             </div>
             <!-- project2 -->
             <div>
@@ -80,6 +79,18 @@
                         Repository</a>,
                     <a href="https://powerful-mountain-92684.herokuapp.com/" target="_blank">Heroku</a></p>
             </div>
+            <!-- project1 -->
+            <div>
+                <h3 class="h3-portfolio">Music Quiz App</h3>
+                <a href="https://marasinipradeep.github.io/music-app/" target="_blank">
+                    <img src="./assets/images/proj1Finished.png" alt="music quiz app" class="portfolio-img">
+                </a>
+                <p class="p-portfolio"> Sources: <a href="https://github.com/marasinipradeep/music-app/"
+                        target="_blank">Github
+                        Repository</a>,
+                    <a href="https://marasinipradeep.github.io/music-app/" target="_blank">Github Pages</a></p>
+            </div>
+
             <!-- hwwk6 -->
             <div>
                 <h3 class="h3-portfolio">Weather Dashboard</h3>
