updated to include python, unity, vr and AC3

--- a/index.html
+++ b/index.html
@@ -41,10 +41,24 @@
     <!-- setting up container for content, with a dark border 
         and additional styling with content-styling  -->
     <section class="container border border-dark content-styling">
+        <!-- <div class="row">
+            <div class="col">
+                <!-- Heading -->
+        <!-- <h2 style="font-weight: bold;">Portfolio</h2>
+        </div>
+        </div>
+        <div class="row">
+            <div class="col">
+                <hr> -->
+        <!-- line between heading and content -->
+        <!-- </div>
+        </div> -->
+        <h4>Resume: <a href="./assets/RESUME2020.pdf" target="_blank">Last Updated 11/2020</a></h4>
+
         <div class="row">
             <div class="col">
                 <!-- Heading -->
-                <h2>Portfolio</h2>
+                <h2>Web Development</h2>
             </div>
         </div>
         <div class="row">
@@ -53,7 +67,7 @@
                 <!-- line between heading and content -->
             </div>
         </div>
-        <h4>Resume: <a href="./assets/RESUME2020.pdf" target="_blank">Last Updated 11/2020</a></h4>
+
         <!-- 3 rows, max 2 cols -->
         <div class="row ">
             <!-- project3 -->
@@ -139,8 +153,148 @@
                         Repository</a>,
                     <a href="https://djtoohey.github.io/homework-wk4/" target="_blank">Github Pages</a></p>
             </div>
+
+
         </div>
 
+        <div class="row">
+            <div class="col">
+                <hr>
+                <!-- line between heading and content -->
+            </div>
+        </div>
+        <div class="row">
+            <div class="col">
+                <!-- Heading -->
+                <h2><a href="https://github.com/djtoohey/Python-UniSA/">Python Programming</a></h2>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col">
+                <hr>
+                <!-- line between heading and content -->
+            </div>
+        </div>
+        <div class="row ">
+            <!-- dicepoker -->
+            <div>
+                <h3 class="h3-portfolio">Dice Poker</h3>
+                <a href="https://github.com/djtoohey/Python-UniSA/tree/main/dice-poker/" target="_blank">
+                    <img src="./assets/images/projPyDice.png" alt="Dice Poker" class="portfolio-img">
+                </a>
+                <p class="p-portfolio"> Sources: <a
+                        href="https://github.com/djtoohey/Python-UniSA/tree/main/dice-poker/" target="_blank">Github
+                        Repository</a>
+            </div>
+            <!-- character-cli-game -->
+            <div>
+                <h3 class="h3-portfolio">Character CLI Game</h3>
+                <a href="https://github.com/djtoohey/Python-UniSA/tree/main/character-cli-game/" target="_blank">
+                    <img src="./assets/images/projPyCharacter.png" alt="Character CLI Game" class="portfolio-img">
+                </a>
+                <p class="p-portfolio"> Sources: <a
+                        href="https://github.com/djtoohey/Python-UniSA/tree/main/character-cli-game/"
+                        target="_blank">Github
+                        Repository</a>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col">
+                <hr>
+                <!-- line between heading and content -->
+            </div>
+        </div>
+        <div class="row">
+            <div class="col">
+                <!-- Heading -->
+                <!-- <a href="https://github.com/djtoohey/Unity-AIE/"></a> -->
+                <h2>Unity Programming</h2>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col">
+                <hr>
+                <!-- line between heading and content -->
+            </div>
+        </div>
+        <div class="row ">
+            <!-- Los-Cojones -->
+            <div>
+                <h3 class="h3-portfolio">Los Cojones</h3>
+                <!-- <a href="https://github.com/djtoohey/Unity-AIE/tree/main/los-cojones/" target="_blank"> -->
+                <img src="./assets/images/projUnityLosC.png" alt="Los Cojones" class="portfolio-img">
+                <!-- </a> -->
+                <!-- <p class="p-portfolio"> Sources: <a href="https://github.com/djtoohey/Unity-AIE/tree/main/los-cojones/"
+                        target="_blank">Github
+                        Repository</a> -->
+            </div>
+            <!-- JumpTeleShoot -->
+            <div>
+                <h3 class="h3-portfolio">JumpTeleShoot</h3>
+                <!-- <a href="https://github.com/djtoohey/Python-UniSA/tree/main/character-cli-game/" target="_blank"> -->
+                <img src="./assets/images/projUnityJTS.png" alt="JumpTeleShoot" class="portfolio-img">
+                <!-- </a> -->
+                <!-- <p class="p-portfolio"> Sources: <a
+                        href="https://github.com/djtoohey/Python-UniSA/tree/main/character-cli-game/"
+                        target="_blank">Github
+                        Repository</a> -->
+            </div>
+            <!-- AI Movement -->
+            <div>
+                <h3 class="h3-portfolio">AI Movement Testing</h3>
+                <!-- <a href="https://github.com/djtoohey/Python-UniSA/tree/main/character-cli-game/" target="_blank"> -->
+                <img src="./assets/images/projUnityAI.gif" alt="AI Movement Testing" class="portfolio-img">
+                <!-- </a> -->
+                <!-- <p class="p-portfolio"> Sources: <a
+                        href="https://github.com/djtoohey/Python-UniSA/tree/main/character-cli-game/"
+                        target="_blank">Github
+                        Repository</a> -->
+            </div>
+            <!-- VRTeaPotBasketBall -->
+            <div>
+                <h3 class="h3-portfolio">VR TeaPot BasketBall</h3>
+                <!-- <a href="https://github.com/djtoohey/Python-UniSA/tree/main/character-cli-game/" target="_blank"> -->
+                <img src="./assets/images/projUnityVR.png" alt="VR TeaPot BasketBall" class="portfolio-img">
+                <!-- </a> -->
+                <!-- <p class="p-portfolio"> Sources: <a
+                        href="https://github.com/djtoohey/Python-UniSA/tree/main/character-cli-game/"
+                        target="_blank">Github
+                        Repository</a> -->
+            </div>
+        </div>
+
+
+        <div class="row">
+            <div class="col">
+                <hr>
+                <!-- line between heading and content -->
+            </div>
+        </div>
+        <div class="row">
+            <div class="col">
+                <!-- Heading -->
+                <!-- <a href="https://github.com/djtoohey/Unity-AIE/"></a> -->
+                <h2>ActionScript3 Programming (Flash Game)</h2>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col">
+                <hr>
+                <!-- line between heading and content -->
+            </div>
+        </div>
+        <div class="row ">
+            <!-- Los-Cojones -->
+            <div>
+                <h3 class="h3-portfolio">Sechs Krieg</h3>
+                <a href="https://github.com/djtoohey/Year12-FinalProject/" target="_blank">
+                    <img src="./assets/images/projAS3SK.png" alt="Sechs Krieg (Six War)" class="portfolio-img">
+                    <!-- </a> -->
+                    <!-- <p class="p-portfolio"> Sources: <a href="https://github.com/djtoohey/Unity-AIE/tree/main/los-cojones/"
+                        target="_blank">Github
+                        Repository</a> -->
+            </div>
     </section>
 
 
@@ -153,7 +307,8 @@
 
         <!-- puts in a scalable padding using bootstrap -->
         <div class="py-3 footer-bg">
-            Declan Toohey &copy
+            Declan Toohey &copy <a href="https://www.linkedin.com/in/DeclanToohey" style="color: white;">LinkedIn</a> <a
+                href="http://github.com/djtoohey/" style="color: white;">Github</a>
         </div>
     </footer>
 </body>
