changed end of photos in index.html from png to PNG

--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
             <div>
                 <h3 class="h3-portfolio">Dice Poker</h3>
                 <a href="https://github.com/djtoohey/Python-UniSA/tree/main/dice-poker/" target="_blank">
-                    <img src="./assets/images/projPyDice.png" alt="Dice Poker" class="portfolio-img">
+                    <img src="./assets/images/projPyDice.PNG" alt="Dice Poker" class="portfolio-img">
                 </a>
                 <p class="p-portfolio"> Sources: <a
                         href="https://github.com/djtoohey/Python-UniSA/tree/main/dice-poker/" target="_blank">Github
@@ -190,7 +190,7 @@
             <div>
                 <h3 class="h3-portfolio">Character CLI Game</h3>
                 <a href="https://github.com/djtoohey/Python-UniSA/tree/main/character-cli-game/" target="_blank">
-                    <img src="./assets/images/projPyCharacter.png" alt="Character CLI Game" class="portfolio-img">
+                    <img src="./assets/images/projPyCharacter.PNG" alt="Character CLI Game" class="portfolio-img">
                 </a>
                 <p class="p-portfolio"> Sources: <a
                         href="https://github.com/djtoohey/Python-UniSA/tree/main/character-cli-game/"
@@ -223,7 +223,7 @@
             <div>
                 <h3 class="h3-portfolio">Los Cojones</h3>
                 <!-- <a href="https://github.com/djtoohey/Unity-AIE/tree/main/los-cojones/" target="_blank"> -->
-                <img src="./assets/images/projUnityLosC.png" alt="Los Cojones" class="portfolio-img">
+                <img src="./assets/images/projUnityLosC.PNG" alt="Los Cojones" class="portfolio-img">
                 <!-- </a> -->
                 <!-- <p class="p-portfolio"> Sources: <a href="https://github.com/djtoohey/Unity-AIE/tree/main/los-cojones/"
                         target="_blank">Github
@@ -233,7 +233,7 @@
             <div>
                 <h3 class="h3-portfolio">JumpTeleShoot</h3>
                 <!-- <a href="https://github.com/djtoohey/Python-UniSA/tree/main/character-cli-game/" target="_blank"> -->
-                <img src="./assets/images/projUnityJTS.png" alt="JumpTeleShoot" class="portfolio-img">
+                <img src="./assets/images/projUnityJTS.PNG" alt="JumpTeleShoot" class="portfolio-img">
                 <!-- </a> -->
                 <!-- <p class="p-portfolio"> Sources: <a
                         href="https://github.com/djtoohey/Python-UniSA/tree/main/character-cli-game/"
@@ -255,7 +255,7 @@
             <div>
                 <h3 class="h3-portfolio">VR TeaPot BasketBall</h3>
                 <!-- <a href="https://github.com/djtoohey/Python-UniSA/tree/main/character-cli-game/" target="_blank"> -->
-                <img src="./assets/images/projUnityVR.png" alt="VR TeaPot BasketBall" class="portfolio-img">
+                <img src="./assets/images/projUnityVR.PNG" alt="VR TeaPot BasketBall" class="portfolio-img">
                 <!-- </a> -->
                 <!-- <p class="p-portfolio"> Sources: <a
                         href="https://github.com/djtoohey/Python-UniSA/tree/main/character-cli-game/"
@@ -289,7 +289,7 @@
             <div>
                 <h3 class="h3-portfolio">Sechs Krieg</h3>
                 <a href="https://github.com/djtoohey/Year12-FinalProject/" target="_blank">
-                    <img src="./assets/images/projAS3SK.png" alt="Sechs Krieg (Six War)" class="portfolio-img">
+                    <img src="./assets/images/projAS3SK.PNG" alt="Sechs Krieg (Six War)" class="portfolio-img">
                 </a>
                 <!-- <p class="p-portfolio"> Sources: <a href="https://github.com/djtoohey/Unity-AIE/tree/main/los-cojones/"
                         target="_blank">Github
