--- a/index.html
+++ b/index.html
@@ -19,15 +19,16 @@
         <br>
         <p>
             <strong>contact me:</strong> <br>
-            email: declan@DeclanToohey.com<br>
-            phone: +61 431 490 34<br>
+            email: <a href="mailto:declan@declantoohey.com" style="font-weight: normal">declan@declantoohey.com</a><br>
+            phone: <a href="tel:+61431490343" style="font-weight: normal">+61 431 490 34</a><br>
             <a href="https://www.linkedin.com/in/declantoohey/" style="font-weight: normal">linkedin</a><br>
             <a href="https://github.com/djtoohey" style="font-weight: normal">github</a>
         </p>
         <p>
-            <strong>about:</strong> <br>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente, laboriosam ipsum. Quos nihil, culpa magnam at animi aut, asperiores, maxime praesentium ipsum unde odio. Vero distinctio aliquam unde, fugit ipsum itaque nihil ab dolores sed cumque magni dignissimos, beatae nisi. Molestias tempora deleniti cupiditate animi velit maiores atque harum ipsam.
-            <br><a href="./assets/RESUME2020.pdf">resume</a>
+            <!-- <strong>about:</strong> <br>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente, laboriosam ipsum. Quos nihil, culpa magnam at animi aut, asperiores, maxime praesentium ipsum unde odio. Vero distinctio aliquam unde, fugit ipsum itaque nihil ab dolores sed cumque magni dignissimos, beatae nisi. Molestias tempora deleniti cupiditate animi velit maiores atque harum ipsam. -->
+            <!-- <br> -->
+            <a href="./assets/RESUME2020.pdf">resume</a>
         </p>
     </div>
     <div>
